--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://author-p136715-e1377466.adobeaemcloud.com/bin/franklin.delivery/vvedagiri/xwalk20Jun/main"
+    url: "https://author-p7723-e1404866.adobeaemcloud.com/bin/franklin.delivery/vvedagiri/xwalk20Jun/main"
     type: "markup"
     suffix: ".html"
